--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,11 @@
 a {
   color: $main-primary;
 }
+
+// needed for the padding fix when subscriptSizing: 'dynamic'
+mat-form-field .mat-mdc-form-field {
+  &-subscript-wrapper {
+    padding-bottom: 22px;
+  }
+}
+
